[gd_scene load_steps=7 format=3 uid="uid://5g0ck17xo6y0"]

[ext_resource type="Script" uid="uid://m0h24osf5ffj" path="res://UI/main_menu.gd" id="1_4cwpn"]
[ext_resource type="Texture2D" uid="uid://3yciuak73kd2" path="res://assets/icon.svg" id="1_p8ccj"]
[ext_resource type="Script" uid="uid://c4v1v1ymqatyg" path="res://UI/menu.gd" id="1_tk8dj"]
[ext_resource type="Texture2D" uid="uid://bv58m5ar8agh6" path="res://assets/ilovethisbg.png" id="2_8ctay"]
[ext_resource type="Script" uid="uid://dtlrtrftvhm8e" path="res://UI/exit_confirm.gd" id="3_d8nwk"]
[ext_resource type="Script" uid="uid://dlaebbrda0pel" path="res://UI/logo_buttons.gd" id="3_f40uw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cwpn")

[node name="background color" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8ctay")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Menu" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -81.5
offset_right = 410.0
offset_bottom = 81.5
grow_vertical = 2
scale = Vector2(1.4, 1.4)
script = ExtResource("1_tk8dj")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Hello Gamer,"

[node name="game" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="options" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="creds" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="ausgang" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 236.0
grow_vertical = 0
text = "Ver.0.0.0.0.0.0.0.0 / build: none"

[node name="logo_buttons" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 317.0
offset_bottom = 153.0
script = ExtResource("3_f40uw")

[node name="logo_button" type="TextureButton" parent="logo_buttons"]
layout_mode = 2
texture_normal = ExtResource("1_p8ccj")
texture_pressed = ExtResource("1_p8ccj")

[node name="patreon_button" type="TextureButton" parent="logo_buttons"]
layout_mode = 2
texture_normal = ExtResource("1_p8ccj")
texture_pressed = ExtResource("1_p8ccj")

[node name="exit_confirm" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -49.0
offset_right = 268.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_d8nwk")

[node name="ColorRect" type="ColorRect" parent="exit_confirm"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 0.658824, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="exit_confirm/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="exit_confirm/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Are you sure you want to quit?"
justification_flags = 131
uppercase = true

[node name="yes" type="Button" parent="exit_confirm/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "I regret to inform you I would like to terminate my session"

[node name="no" type="Button" parent="exit_confirm/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "I have no interest in terminating my amazing session
"

[connection signal="pressed" from="Menu/VBoxContainer/game" to="." method="_on_game_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/creds" to="." method="_on_creds_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ausgang" to="." method="_on_ausgang_pressed"]
[connection signal="pressed" from="exit_confirm/ColorRect/VBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="exit_confirm/ColorRect/VBoxContainer/no" to="." method="_on_no_pressed"]
